remove post-image a display:block definition for index.html image overflow issue

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -945,7 +945,6 @@ body.nav-opened .nav {
 }
 
 .post-image a {
-    display: block;
     height: 100%;
     width: 100%;
     max-height: 400px;
